# riam

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yml
src/: condition.rs  engine.rs  error.rs  lib.rs  policy.rs  request.rs  wildcard.rs
src/conditions/: boolean.rs  condition.rs  date.rs  ip_addr.rs  mod.rs  numeric.rs  string.rs  util.rs
src/managers/: memory.rs  mod.rs
tests/: conditions.json  eval_conditions.rs  eval_policies.rs  memory_manager.rs  policies.json
