[package]
name = "riam"
version = "0.1.0"
authors = ["Aaron J Todd <aajtodd@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A IAM inspired policy engine for making authorization decisions"
repository = "https://github.com/aajtodd/riam"
keywords = ["iam", "policy", "authorization", "access-control"]
categories = ["authentication"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
failure = "0.1.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
enum_dispatch = "0.3"
rust_decimal = "1.2.1"
chrono = { version = "0.4", features = ["serde"] }
ipnet = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_test = "1.0"

[features]
# internal features used in CI
nightly = []
